[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wt"
version = "0.1.0"
description = "Worktree session manager for git, graphite, tmux, and Claude Code"
requires-python = ">=3.9"
dependencies = [
    "tmuxp>=1.28.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
wt = "wt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
