[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wt"
version = "0.1.0"
description = "Worktree session manager for git, graphite, tmux, and Claude Code"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "simple-term-menu>=1.6.0",
    "argcomplete>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
wt = "wt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
